--- a/my-book/_quarto.yml
+++ b/my-book/_quarto.yml
@@ -2,7 +2,7 @@ project:
   type: book
 
 book:
-  title: "diary"
+  title: "my-book"
   author: "Norah Jones"
   date: "2024/1/23"
   chapters:
@@ -19,5 +19,5 @@ format:
   pdf:
     documentclass: scrreprt
 
-editor: visual
+
 
