--- a/my-book/_quarto.yml
+++ b/my-book/_quarto.yml
@@ -2,11 +2,12 @@ project:
   type: book
 
 book:
-  title: "my-book"
+  title: "CASA0023 Learning Diary"
   author: "Norah Jones"
   date: "2024/1/23"
   chapters:
     - index.qmd
+    - week1.qmd
     - intro.qmd
     - summary.qmd
     - references.qmd
